# qoopty

./: .codacy.yml  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  requirements.in  requirements.txt  setup.cfg  setup.py
qoopty/: __init__.py
