[metadata]
name = qoopty
url = http://github.com/LegumeFederation/qoopty
author = Joel Berendzen
author_email = joelb@ncgr.org
maintainer = Joel Berendzen
maintainer_email = joelb@ncgr.org
long_description = file:README.rst
description-file =
    README.rst
    CHANGELOG.rst
keywords =
    deployment
    web server
    queuing
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: C
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
zip_safe = False
include_package_data = True
packages = qoopty
install_requires =
    distro
    Flask-RQ2[cli]
    rq_dashboard
    gunicorn
    raven[flask]
    healthcheck
    superlance
    htpasswd
    prometheus-client
    coverage
    supervisor-wildcards

[options.package_data]
* =
    *.txt
    *.rst
    *.html
    *.c
    *.faa
    *.hmm
    *.sh
    *.css
    *.js
    *.conf
    *.cfg
    favicon.ico

[wheel]
universal=0

